// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests SearchBar.stories Default 1`] = `
<div>
  <div
    class="css-14zx4vh"
  >
    <div
      class="leafygreen-ui-1nkq8lt css-6lshyd"
    >
      <button
        aria-controls="select-1-menu"
        aria-describedby="select-1-description"
        aria-disabled="false"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="searchbar-select"
        class="lg-ui-button-0000 leafygreen-ui-3qrx9g"
        data-cy="searchbar-select"
        data-testid="leafygreen-ui-select-menubutton"
        id="select-2"
        type="button"
        value="filter"
      >
        <div
          class="leafygreen-ui-v038xi"
        />
        <div
          class="leafygreen-ui-1qmzz4y"
        >
          <div
            class="leafygreen-ui-obh8q1"
          >
            <div
              class="leafygreen-ui-17aj16e"
            >
              Filter
            </div>
          </div>
          <svg
            alt=""
            aria-hidden="true"
            class="leafygreen-ui-4dp7tf"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="css-1xm32e0"
    >
      <div
        class="css-xvgrqg"
      >
        <button
          aria-disabled="false"
          aria-labelledby="View search suggestions"
          class="leafygreen-ui-1xt2asn"
          data-cy="search-suggestion-button"
          tabindex="0"
          title="View search suggestions"
        >
          <div
            class="leafygreen-ui-xhlipt"
          >
            <svg
              aria-label="Bulb Icon"
              class="leafygreen-ui-a4wnk0"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.331 8.5a5 5 0 10-8.612.086L5.408 11.5a1 1 0 00.866.499H6.5V6a1.5 1.5 0 113 0v6h.224a1 1 0 00.863-.496L12.34 8.5h-.009z"
                fill="currentColor"
              />
              <path
                d="M7.5 6v6h1V6a.5.5 0 00-1 0zM10 14v-1H6v1a1 1 0 001 1h2a1 1 0 001-1z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-label="Caret Down Icon"
              class="leafygreen-ui-a4wnk0"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.679 10.796a.554.554 0 01-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="css-1xm32e0"
      >
        <div
          class="leafygreen-ui-1br9h7w css-z4vplf"
        >
          <div
            class="leafygreen-ui-e3fvh5"
          />
          <div
            aria-disabled="false"
            class="leafygreen-ui-1vizp6e"
          >
            <div
              class="leafygreen-ui-1ago99h"
            >
              <input
                aria-describedby="lg-form-field-description-204"
                aria-invalid="true"
                autocomplete="on"
                class="lg-ui-form-field-input-0000 leafygreen-ui-vrj1me"
                data-cy="searchbar-input"
                id="lg-form-field-input-205"
                placeholder="optional, regexp to search"
                required=""
                spellcheck="false"
                type="text"
                value=""
              />
            </div>
            <div
              class="leafygreen-ui-44gx6g"
            >
              <svg
                alt=""
                aria-hidden="true"
                class="leafygreen-ui-160ryfb"
                fill="none"
                height="16"
                role="presentation"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M8.864 1.514a.983.983 0 0 0-1.728 0L1.122 12.539A.987.987 0 0 0 1.986 14h12.028a.987.987 0 0 0 .864-1.461L8.864 1.514ZM7 5a1 1 0 0 1 2 0v4a1 1 0 0 1-2 0V5Zm2 7a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="leafygreen-ui-jsxxy6"
          >
            <p
              class="leafygreen-ui-jvw8or"
              data-testid="lg-form_field-error_message"
              id="lg-form-field-description-204"
            />
          </div>
        </div>
        <div
          class="css-1kijwh"
        >
          <div
            class="leafygreen-ui-cssveg css-1a9hvxo"
            data-cy="searchbar-error"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests SearchBar.stories WithSearchSuggestions 1`] = `
<div>
  <div
    class="css-14zx4vh"
  >
    <div
      class="leafygreen-ui-1nkq8lt css-6lshyd"
    >
      <button
        aria-controls="select-3-menu"
        aria-describedby="select-3-description"
        aria-disabled="false"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="searchbar-select"
        class="lg-ui-button-0000 leafygreen-ui-3qrx9g"
        data-cy="searchbar-select"
        data-testid="leafygreen-ui-select-menubutton"
        id="select-4"
        type="button"
        value="filter"
      >
        <div
          class="leafygreen-ui-v038xi"
        />
        <div
          class="leafygreen-ui-1qmzz4y"
        >
          <div
            class="leafygreen-ui-obh8q1"
          >
            <div
              class="leafygreen-ui-17aj16e"
            >
              Filter
            </div>
          </div>
          <svg
            alt=""
            aria-hidden="true"
            class="leafygreen-ui-4dp7tf"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="css-1xm32e0"
    >
      <div
        class="css-xvgrqg"
      >
        <button
          aria-disabled="false"
          aria-labelledby="View search suggestions"
          class="leafygreen-ui-1xt2asn"
          data-cy="search-suggestion-button"
          tabindex="0"
          title="View search suggestions"
        >
          <div
            class="leafygreen-ui-xhlipt"
          >
            <svg
              aria-label="Bulb Icon"
              class="leafygreen-ui-a4wnk0"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.331 8.5a5 5 0 10-8.612.086L5.408 11.5a1 1 0 00.866.499H6.5V6a1.5 1.5 0 113 0v6h.224a1 1 0 00.863-.496L12.34 8.5h-.009z"
                fill="currentColor"
              />
              <path
                d="M7.5 6v6h1V6a.5.5 0 00-1 0zM10 14v-1H6v1a1 1 0 001 1h2a1 1 0 001-1z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-label="Caret Down Icon"
              class="leafygreen-ui-a4wnk0"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.679 10.796a.554.554 0 01-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="css-1xm32e0"
      >
        <div
          class="leafygreen-ui-1br9h7w css-z4vplf"
        >
          <div
            class="leafygreen-ui-e3fvh5"
          />
          <div
            aria-disabled="false"
            class="leafygreen-ui-mrtshz"
          >
            <div
              class="leafygreen-ui-1ago99h"
            >
              <input
                aria-describedby=""
                aria-invalid="false"
                autocomplete="on"
                class="lg-ui-form-field-input-0000 leafygreen-ui-vrj1me"
                data-cy="searchbar-input"
                id="lg-form-field-input-210"
                placeholder="optional, regexp to search"
                required=""
                spellcheck="false"
                type="text"
                value=""
              />
            </div>
            <div
              class="leafygreen-ui-44gx6g"
            />
          </div>
          <div
            class="leafygreen-ui-jsxxy6"
          />
        </div>
        <div
          class="css-1kijwh"
        >
          <button
            aria-disabled="true"
            aria-label="Select plus"
            class="leafygreen-ui-beb9er"
            data-cy="searchbar-submit"
            tabindex="0"
          >
            <div
              class="leafygreen-ui-xhlipt"
            >
              <svg
                aria-label="Plus Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.5 2a1 1 0 00-1 1v3.5H3a1 1 0 00-1 1v1a1 1 0 001 1h3.5V13a1 1 0 001 1h1a1 1 0 001-1V9.5H13a1 1 0 001-1v-1a1 1 0 00-1-1H9.5V3a1 1 0 00-1-1h-1z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
